# Smart_Shop-AI-Assistant

./: app.py  main.py  pyproject.toml  smartshopAI_documentation.odt
data/: ecommerce_products.csv
src/api/: dependencies.py  routes.py
src/core/: config.py  security.py
src/data_layer/: ingest.py  repository.py  vector_store.py
src/langchain_module/: chains.py  models.py  output_parsers.py  prompts.py
src/schemas/: chat.py  metadata_schema.py
src/utils/: logger.py  metadata_parser.py
