[project]
name = "smart-shop-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-chroma>=0.1.0",
    "pandas>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.25.0",
    "python-dotenv>=1.0.0",
    "pysqlite3-binary>=0.5.4.post2",
    "chromadb>=1.5.5",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.3.0",
    "langchain-community>=0.4.1",
]
